--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # --- 敏感文件 (严禁上传) ---
 .superusertoken
+.env
+
 
 # --- 数据库文件 ---
 *.db
@@ -21,3 +23,4 @@ bin/
 
 # --- 依赖管理 ---
 # vendor/  # 如果你使用 go mod vendor 且想提交，可以注释掉这行
+
