--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   app:
-    build: .
-    container_name: website-monolith
+    image: ghcr.io/pdnode-team/website:v1.0.0-dev.6
+    container_name: pdnode-website
     ports:
       - "8090:8090"
     volumes:
