fix bug in build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,12 @@ jobs:
         with:
           node-version: '22'
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 10
+          run_install: false # 让 Makefile 处理安装逻辑
+
       - name: Install dependencies and Build
         run: |
           make all
